# portfolio

./: .gitignore  CMakeLists.txt  README.md  fileio.c  fileio.h  lettermap.c  lettermap.h  main.c  movie.h  mybool.h  nCursesHandler.c  nCursesHandler.h  test.c  trie.c  trie.h
